jenkins/jenkins-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: jenkins
  name: jenkins
  namespace: kube-system
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - port: 8080
      name: jenkins
      targetPort: 8080
    - port: 50000
      name: jenkins-agent
      targetPort: 50000
  selector:
    k8s-app: jenkins
